@@ -5,6 +5,9 @@ Revision history for Whelk
 	- Fixed object strictness check
 	- Fixed using partial schemas defined in a hash
 	- Improved error locations reported by the module
+	- Changed explicit overriding of default values when extending schemas
+		- undef is now a valid default value for nullable fields
+		- removing existing default value must now be done with Whelk::Schema::NO_DEFAULT
 
 1.00 - 2024-09-08
 	- Stable version
